<resources>

    <!-- App -->
    <string name="app_name">Comics Collection</string>
    <string name="app_name_launcher">Comics</string>
    <string name="app_website_url">http://www.florianweinaug.de</string>
    <string name="app_feedback_url">mailto:fweinaug-apps@outlook.com?subject=Comics Collection</string>

    <!-- Global -->
    <string name="number_format">%1$d</string>
    <string name="decimal_format">%1.1f</string>
    <string name="issue_number_format">#%1$s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <plurals name="comics">
        <item quantity="one">%d comic</item>
        <item quantity="other">%d comics</item>
    </plurals>
    <plurals name="issues">
        <item quantity="one">%d issue</item>
        <item quantity="other">%d issues</item>
    </plurals>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>

    <!-- Menus -->
    <string name="menu_details">Details</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add_comic">Add comic</string>
    <string name="menu_add_issue">Add issue</string>
    <string name="menu_edit_issue">Edit issue</string>
    <string name="menu_statistics">Statistics</string>

    <!-- Dialogs -->
    <string name="dialog_cancel">Cancel</string>

    <!-- Comic Details -->
    <string name="comic_detail_name">Name</string>
    <string name="comic_detail_issues">Issues</string>
    <string name="comic_detail_issues_count">%1$s (%2$s)</string>
    <string name="comic_detail_publisher">Publisher</string>
    <string name="comic_detail_concluded">Concluded</string>
    <string name="comic_detail_view">View</string>
    <string name="comic_detail_view_list">List</string>
    <string name="comic_detail_view_grid">Grid</string>

    <!-- Issue Details -->
    <string name="issue_detail_title">Title</string>
    <string name="issue_detail_summary">Summary</string>

    <!-- Add Comic Dialog -->
    <string name="comic_add_header">Add Comic</string>
    <string name="comic_add_name">Name</string>
    <string name="comic_add_publisher">Publisher</string>
    <string name="comic_add_concluded">Concluded</string>
    <string name="comic_add_create">Create</string>

    <!-- Edit Issue Dialog -->
    <string name="issue_edit_header">Edit Issue</string>
    <string name="issue_edit_title">Title</string>
    <string name="issue_edit_summary">Summary</string>
    <string name="issue_edit_update">Update</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_info">Info</string>
    <string name="settings_info_about">About this App</string>
    <string name="settings_info_feedback">Send Feedback</string>
    <string name="settings_info_website">Visit Website</string>
    <string name="settings_info_rate">Rate this App</string>

    <!-- Statistics -->
    <string name="statistics_title">Statistics</string>
    <string name="statistics_comics">Comics</string>
    <string name="statistics_comics_total">Total</string>
    <string name="statistics_comics_concluded">Concluded</string>
    <string name="statistics_comics_read">Read</string>
    <string name="statistics_comics_read_percentage">Read (%)</string>
    <string name="statistics_issues">Issues</string>
    <string name="statistics_issues_total">Total</string>
    <string name="statistics_issues_average">Average</string>
    <string name="statistics_issues_read">Read</string>
    <string name="statistics_reading_progress">Reading progress</string>
    <string name="statistics_publishers">Publishers</string>
    <string name="statistics_publishers_distribution">Distribution by publisher</string>
    <string name="statistics_empty">No data found</string>
</resources>
