<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add_issue"
        android:title="@string/menu_add_issue"
        android:icon="@drawable/ic_menu_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_details"
        android:title="@string/menu_details"
        android:icon="@drawable/ic_menu_details"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_view"
        android:title="@string/comic_detail_view"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/menu_view_grid"
                android:title="@string/comic_detail_view_grid"
                android:icon="@drawable/ic_menu_view_grid" />
            <item
                android:id="@+id/menu_view_list"
                android:title="@string/comic_detail_view_list"
                android:icon="@drawable/ic_menu_view_list" />
        </menu>
    </item>
</menu>